[RM] Bug #58062. Fix some tests
Change-Id: I79b719b093cc95e3aedb673395d9627f8c082db5